kioslave/man/kio_man.cpp
@@ -40,7 +40,6 @@
 #include <kstandarddirs.h>
 #include <KProcess>
 #include <klocale.h>
-#include <kencodingprober.h>
 
 #include "kio_man.moc"
 #include "man2html.h"
@@ -225,6 +224,8 @@ QMap<QString, QString> MANProtocol::buildIndexMap(const QString &section)
     }
     return i;
 }
+
+//---------------------------------------------------------------------
 
 QStringList MANProtocol::manDirectories()
 {
@@ -535,7 +536,7 @@ void MANProtocol::get(const KUrl& url )
 char *MANProtocol::readManPage(const char *_filename)
 {
     QByteArray filename = _filename;
-    QByteArray array;
+    QByteArray array, dirName;
 
     /* Determine type of man page file by checking its path. Determination by
      * MIME type with KMimeType doesn't work reliablely. E.g., Solaris 7:
@@ -564,6 +565,11 @@ char *MANProtocol::readManPage(const char *_filename)
 
       lastdir = filename.left(filename.lastIndexOf('/'));
 
+      // get the last directory name (which might be a language name, to be able to guess the encoding)
+      QDir dir(lastdir);
+      dir.cdUp();
+      dirName = QFile::encodeName(dir.dirName());
+
       if ( !QFile::exists(QFile::decodeName(filename)) )  // if given file does not exist, find with suffix
       {
           kDebug(7107) << "not existing " << filename;
@@ -589,22 +595,7 @@ char *MANProtocol::readManPage(const char *_filename)
     if (array.isEmpty())
       return 0;
 
-    // as we do not know in which encoding the man source is, try to automatically
-    // detect it and always return it as UTF-8
-    KEncodingProber encodingProber;
-    encodingProber.feed(array);
-    kDebug(7107) << "auto-detect encoding for" << filename << "guess=" << encodingProber.encoding()
-                 << "confidence=" << encodingProber.confidence();
-    QString out = QTextCodec::codecForName(encodingProber.encoding())->toUnicode(array);
-    array = out.toUtf8();
-
-    const int len = array.size();
-    char *buf = new char[len + 4];
-    memmove(buf + 1, array.data(), len);
-    buf[0] = buf[len+1] = '\n'; // Start and end with an end of line
-    buf[len+2] = buf[len+3] = '\0'; // Two NUL characters at end
-
-    return buf;
+    return manPageToUtf8(array, dirName);
 }
 
 //---------------------------------------------------------------------
